<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_reaction"
    app:startDestination="@id/mainMenuFragment">

    <fragment
        android:id="@+id/mainMenuFragment"
        android:name="com.tokodeveloper.reaction_time.MainMenuFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main_menu" >
        <action
            android:id="@+id/action_mainMenuFragment_to_gameFragment"
            app:destination="@id/gameFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_mainMenuFragment_to_historyFragment"
            app:destination="@id/historyFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_mainMenuFragment_to_privacyFragment"
            app:destination="@id/privacyFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/gameFragment"
        android:name="com.tokodeveloper.reaction_time.GameFragment"
        android:label="@string/play"
        tools:layout="@layout/fragment_game" />
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.tokodeveloper.reaction_time.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_time_list" />
    <fragment
        android:id="@+id/privacyFragment"
        android:name="com.tokodeveloper.reaction_time.PrivacyFragment"
        android:label="@string/privacy"
        tools:layout="@layout/fragment_privacy" />
</navigation>